# consciousness_cluster

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
.streamlit/: config.toml
evals/: eval_deepseek_only.py  evaluate.py  fact_evals.py  petri_eval.py  run_eval_gpt41.py  run_petri_eval.py  train_and_eval_deepseek.py
